# nutrition

./: .gitignore  README.md  job_details.json
api/: .pylintrc  .pylintrc-tests  manage.py  pyproject.toml  tox.ini
api/apps/exercises/: admin.py  apps.py  models.py
api/apps/exercises/migrations/: 0001_initial.py  0002_initial.py  0002_rename_datetime_exercise_date_time.py  0003_alter_daysteps_options.py  0003_exercise_user.py  0004_alter_exercise_type_daysteps.py  0005_remove_daysteps_user_remove_exercise_date_time_and_more.py
api/apps/foods/: admin.py  mutations.py  queries.py  types.py
api/apps/foods/admin/: recipe.py
api/apps/foods/migrations/: 0001_initial.py  0002_alter_food_calories_alter_food_carbs_g_and_more.py  0002_food_barcode.py  0002_rename_serving_size_food_nutritional_info_size_and_more.py  0003_remove_foodproduct_name_remove_recipe_name_food_name.py  0003_rename_carbs_grs_food_carbs_g_and_more.py  0004_alter_food_calcium_perc_alter_food_carbs_g_and_more.py  0004_remove_foodproduct_serving_size_and_more.py  0005_alter_food_num_servings_and_more.py  0005_alter_food_serving_unit_and_more.py  0005_remove_food_serving_size_remove_food_serving_unit_and_more.py  0006_alter_food_calcium_perc_alter_food_iron_perc_and_more.py  0006_alter_food_protein_g_and_more.py  0006_remove_recipe_link_food_url.py  0007_alter_food_fiber_carbs_g_and_more.py  0007_alter_food_serving_unit_and_more.py  0007_alter_foodproduct_barcode.py  0008_alter_food_serving_unit_and_more.py  0008_alter_food_weight.py  0008_food_serving_size_food_serving_unit_and_more.py  0009_alter_food_serving_size_and_more.py  0009_remove_foodproduct_brand_food_brand.py  0010_alter_food_serving_unit_and_more.py  0010_alter_recipe_calories_alter_recipe_carbs_g_and_more.py  0011_recipeingredient_calcium_perc_and_more.py  0012_rename_ingredient_recipeingredient_food.py  0013_remove_recipe_macros_from_ingredients_and_more.py
api/apps/foods/models/: __init__.py  food.py  nutrients.py  product.py  proportion.py  quantity.py  recipe.py  serving.py  units.py
api/apps/foods/signals/: handlers.py
api/apps/goals/: admin.py  models.py
api/apps/goals/migrations/: 0001_initial.py  0002_initial.py  0003_rename_fat_perc_fatpercgoal_body_fat_perc.py
api/apps/libs/: admin.py
api/apps/measurements/: admin.py  apps.py  models.py
api/apps/measurements/migrations/: 0001_initial.py  0002_initial.py  0003_measurement_updated_at.py  0003_remove_measurement_fat_perc_and_more.py
api/apps/plans/admin/: __init__.py  day.py  intake.py  tracking.py  week.py
api/apps/plans/migrations/: 0001_initial.py  0002_initial.py  0003_alter_day_calories_alter_day_carbs_g_alter_day_fat_g_and_more.py  0003_remove_intake_serving_size_and_more.py  0003_rename_carbs_goal_grs_day_weekplan_carbs_goal_g_day_and_more.py  0004_rename_carbs_goal_g_day_weekplan_carbs_g_goal_day_and_more.py  0004_rename_time_intake_planned_time.py  0005_alter_intake_num_servings.py  0005_remove_dayfood_servings.py  0005_remove_weekplan_carbs_g_goal_day_and_more.py  0006_dayfood_serving_size_dayfood_serving_unit.py  0006_weekplan_protein_g_kg.py  0007_alter_dayfood_serving_size.py  0007_day_protein_g_goal.py  0008_dayfood_calcium_perc_dayfood_calories_and_more.py  0008_weekplan_fat_perc.py  0009_alter_weekplan_fat_perc.py  0009_daytracking_calcium_perc_daytracking_calories_and_more.py  0010_dayfood_time.py  0011_weekplan_deficit.py  (+13 more)
api/apps/users/: admin.py  apps.py  managers.py  models.py
api/config/: schema.py  settings.py  urls.py
api/tests/: conftest.py
api/tests/exercises/: factories.py
api/tests/foods/: factories.py  test_admin.py  test_create_food_product.py  test_food.py  test_product.py  test_proportion.py  test_recipes.py  test_recipes_nutrients.py  test_recipes_servings.py
api/tests/goals/: factories.py  test_admin.py  test_models.py
api/tests/measurements/: factories.py
api/tests/plans/: factories.py  test_admin.py  test_day.py  test_daytracking.py  test_intake_e2e.py  test_week.py  test_weeks.py
api/tests/users/: factories.py  test_managers.py
backend/: .coveragerc  .dockerignore  .flake8  .pylintrc-tests  Makefile  README.md  manage.py  pyproject.toml  pytest.ini  setup.py  test_gql.py  test_gql_2.py  test_gql_3.py  tox.ini
backend/apps/exercises/: admin.py  apps.py  models.py  schema.py
backend/apps/foods/: apps.py  managers.py  nutrition_facts_finder.py  ocado_scraper.py  schema.py
backend/apps/garmin/: admin.py  apps.py  models.py  schema.py  service.py  sync.py
backend/apps/goals/: admin.py  apps.py  models.py  schema.py
backend/apps/libs/: admin.py  basemodel.py  utils.py
backend/apps/measurements/: admin.py  apps.py  models.py  schema.py
backend/apps/plans/: apps.py  schema.py
backend/apps/users/: admin.py  apps.py  managers.py  models.py
backend/config/: asgi.py  authentication.py  middleware.py  schema.py  settings.py  urls.py  wsgi.py
backend/docker/: Dockerfile  entrypoint.sh
backend/docker/ansible/: backend.yml
backend/platform/docker/: Dockerfile  entrypoint.sh
backend/platform/kube/: Chart.yaml  README.md  values.yaml
backend/scripts/: create_test_user.py  seed_test_day.py
backend/tests/: conftest.py
backend/tests/ci/: test_generate_preview.py
backend/tests/config/: test_schema.py
backend/tests/exercises/: factories.py  test_admin.py  test_schema.py
backend/tests/foods/: factories.py  test_abv.py  test_admin.py  test_cupboard.py  test_cupboard_schema.py  test_food.py  test_product.py  test_product_schema.py  test_recipe_schema.py  test_recipes_servings.py  test_salt.py  test_scrape_ocado.py  test_servings.py
backend/tests/garmin/: __init__.py  test_models.py  test_schema.py  test_service.py  test_sync.py  test_sync_v2.py
backend/tests/goals/: factories.py  test_schema.py
backend/tests/measurements/: factories.py  test_admin.py  test_schema.py
backend/tests/plans/: factories.py  test_admin.py  test_day.py  test_day_flags.py  test_intake.py  test_intake_e2e.py  test_schema.py  test_week.py
backend/tests/users/: factories.py  test_admin.py  test_managers.py  test_models.py
(+351 files in other folders)
