[tool.black]
line-length = 79

[tool.pydocstyle]
convention = "google"
match = ".*\\.py"
match-dir = "(?!migrations).*"
add-ignore = "D107,D104,D106"

[tool.mypy]
plugins = "mypy_django_plugin.main"

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.poetry]
name = "nutrition"
version = "0.1.0"
description = ""
authors = ["Luis Muñoz <luis.munoz.villarreal@gmail.com>"]
packages = [
    { include = "apps" },
    { include = "config" },
    { include = "manage.py" },
]

[tool.poetry.dependencies]
python = "^3.11"
django-admin-sortable2 = "2.1.9"
django-compressor = "4.4"
django-cors-headers = "4.2.0"
django-extensions = "3.2.3"
django-nested-inline = "0.4.6"
django = "4.2.4"
pint = "0.22"

[tool.poetry.group.dev.dependencies]
black = "23.7.0"
django-stubs = "4.2.3"
flake8 = "6.1.0"
flake8-isort = "6.0.0"
ipython = "8.14.0"
ipdb = "0.13.13"
mypy = "1.4.1"
pydocstyle = "6.3.0"
pylint-django = "2.5.3"
pylint = "2.17.5"
pytest-cov = "4.1.0"
pytest-django = "4.5.2"
pytest-factoryboy = "2.5.1"
pytest-mock = "3.11.1"
pytest-xdist = "3.3.1"
pytest = "7.4.0"
tox = "4.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
