[project]
name = "nutrition"
version = "0.1.0"
description = ""
authors = [{ name = "Luis Muñoz", email = "luis.munoz.villarreal@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "django-admin-sortable2>=2.2.4",
    "django-allow-cidr>=0.7.1,<0.9.0",
    "django-compressor>=4.5.1",
    "django-cors-headers>=4.7.0",
    "django-dbbackup>=4.2.1,<6.0.0",
    "django-dotenv>=1.4.2",
    "django-environ>=0.11.2,<0.13.0",
    "django-extensions>=3.2.3,<5.0.0",
    "django-nested-admin>=4.1.1",
    "django-sql-dashboard>=1.2",
    "django-storages[google]>=1.14.4",
    "django-taggit>=6.1.0",
    "django>=5.1.6",
    "google-genai>=0.3.0",
    "gunicorn>=23.0.0",
    "pillow>=11.1.0",
    "pint>=0.24.4",
    "psycopg2>=2.9.10",
    "strawberry-django-auth>=0.378.4",
    "strawberry-graphql[django]>=0.288.1",
    "supervisor>=4.2.5",
]

[project.scripts]
nutrition = "manage:main"

[dependency-groups]
dev = [
    "bandit[toml]>=1.8.2",
    "black>=24.10,<26.0",
    "debugpy>=1.8.12",
    "django-stubs>=5.1.3",
    "epc>=0.0.5",
    "flake8-isort>=6.1.2,<8.0.0",
    "Flake8-pyproject>=1.2.3",
    "flake8>=7.1.1",
    "importmagic>=0.1.7",
    "ipdb>=0.13.13",
    "ipython>=8.32,<10.0",
    "mypy>=1.15.0",
    "pydocstyle>=6.3.0",
    "pylint-django>=2.6.1",
    "pylint>=3.3.4",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
    "pytest-django>=4.9.0",
    "pytest-factoryboy>=2.7.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.1",
    "pytest>=8.3.4,<10.0.0",
    "python-lsp-server[all]>=1.12.2",
    "requests-mock>=1.12.1",
    "types-beautifulsoup4>=4.12.0.20250204",
    "types-requests>=2.32.0.20241016",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.bandit]
exclude_dirs = ["tests", ".tox"]

[tool.black]
line-length = 79

[tool.coverage.report]
show_missing = true
precision = 3
skip_covered = true
fail_under = 100

[tool.coverage.run]
source = ["apps", "config"]
omit = [
    "tests/*",
    "*/migrations/*",
    "manage.py",
    "config/wsgi.py",
    "config/asgi.py",
]
concurrency = ["multiprocessing"]
branch = true

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.flake8]
statistics = true
exclude = [".git", "__pycache__", "manage.py", "**/migrations/"]

[tool.hatch.build.targets.wheel]
packages = ["apps", "config", "manage.py"]

[tool.isort]
profile = "black"
line_length = 79
skip_glob = ["**/migrations/*"]

[tool.mypy]
plugins = "mypy_django_plugin.main"

[[tool.mypy.overrides]]
module = "taggit.models,django_sql_dashboard,django_sql_dashboard.models"
ignore_missing_imports = true

[tool.pydocstyle]
convention = "google"
match = ".*\\.py"
match-dir = "(?!migrations).*"
add-ignore = "D107,D104,D106"

[tool.pylint.FORMAT]
max-line-length = 79

[tool.pylint.MAIN]
django-settings-module = "config.settings"

[tool.pylint.MASTER]
load-plugins = [
    "pylint.extensions.docparams",
    "pylint_django",
    "pylint.extensions.docstyle",
]
# Options for pylint.extensions.docparams
accept-no-param-doc = "no"
accept-no-raise-doc = "no"
accept-no-return-doc = "no"
jobs = 0
ignore = ["migrations"]

[tool.pylint."MESSAGES CONTROL"]
disable = ["model-no-explicit-unicode"]

[tool.pylint.REPORTS]
reports = "y"

[tool.pylint.SIMILARITIES]
ignore-imports = "yes"

[tool.pytest.ini_options]
addopts = [
    "--reuse-db",
    "--ds=config.settings",
    "--cov",
    "--cov-report=term",
    "--cov-report=html",
    "--no-cov-on-fail",
    "--strict-markers",
    "-Werror",
    "-W ignore::FutureWarning",
    "-W ignore:The --rsyncdir command line argument:DeprecationWarning",
    "-W ignore:Type google._upb._message.MessageMapContainer:DeprecationWarning",
    "-W ignore:Type google._upb._message.ScalarMapContainer:DeprecationWarning",
]
testpaths = ["tests"]
junit_family = "xunit2"

[tool.uv]
package = true
